--- a/logClient/death.html
+++ b/logClient/death.html
@@ -15,11 +15,9 @@
 </head>
 <body>
 	<div id="deathContainer">
-		<table id="deathTable">
-			<tr id="deathTr">
-				<td id="nb_death">Death Count: <span id="colortext">0 </span></td>
-			</tr>
-		</table>
+		<div id="nb_death">
+			Death Count: <span id="colortext">0</span>
+		</div>
 	</div>
 </body>
 </html>
